# orb-browser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: main.cc
src/blocker/: filter_rules.cc  filter_rules.h  request_filter.cc  request_filter.h
src/browser/: browser_app.cc  browser_app.h  browser_client.cc  browser_client.h  browser_window.cc  browser_window.h  query_handler.cc  query_handler.h  scheme_handler.cc  scheme_handler.h  tab_manager.cc  tab_manager.h
src/ui/: app.js  index.html  style.css
